[package]
name = "tx_fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
csv = "1.1"
rust_decimal = {version = "1.23.1", features = ["serde-float"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3.26"

[dev-dependencies]
rand = "0.8.5"
